--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.0",
+    "@ai-sdk/anthropic": "^1.2.1",
     "@ai-sdk/react": "^1.2.0",
     "@anthropic-ai/sdk": "^0.39.0",
     "@babel/runtime": "^7.26.10",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
-    "ai": "^4.2.0",
+    "ai": "^4.2.2",
+    "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
@@ -44,6 +45,7 @@
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
+    "@types/archiver": "^6.0.3",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
