--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port=3005",
+    "dev": "next dev -p 3005",
+    "dev:ws": "ts-node --project tsconfig.server.json server/websocket.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3005",
+    "start:ws": "NODE_ENV=production ts-node --project tsconfig.server.json server/websocket.ts",
     "lint": "next lint",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -19,22 +21,31 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.69.0",
+    "@types/react-devtools": "^3.6.2",
     "ai": "^4.2.2",
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "framer-motion": "^11.18.2",
     "leaflet": "^1.9.4",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "latest",
+    "openai": "^4.90.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.4.0",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
+    "vercel": "^41.4.1",
     "yet-another-react-lightbox": "^3.21.8",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -46,9 +57,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/archiver": "^6.0.3",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.9",
     "autoprefixer": "^10.4.17",
@@ -58,7 +69,8 @@
     "jsdom": "^26.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
+    "ts-node": "^10.0.0",
+    "typescript": "latest",
     "vitest": "^3.0.9"
   }
 }
